libolle = library('libolle',
# 'cgal_chull2.cc',
# 'cgal_chull3.cc',
# 'cgal_chull3_intersection.cc',
# 'cgal_cleanup.cc',
# 'cgal_deltri2.cc',
# 'cgal_deltri3.cc',
# 'cgal_tesselate_polyhedron.cc',
'cgal_wrappers.f90',
'dump_data.f90',
'fftw_wrappers.f90',
'geometryfunctions.f90',
'geometryfunctions_generatingfunctions.f90',
'geometryfunctions_objectprocedures.f90',
'geometryfunctions_slicingroutines.f90',
'glmnet_wrappers.f90',
'gottochblandat_boxes.f90',
'gottochblandat_calculus.f90',
'gottochblandat.f90',
'gottochblandat_linalg.f90',
'gottochblandat_physics.f90',
'gottochblandat_sorting.f90',
'gottochblandat_tensors.f90',
'hdf5_wrappers.f90',
'ifc_solvers_diagnostics.f90',
'ifc_solvers_diel.f90',
'ifc_solvers.f90',
'ifc_solvers_fastugly.f90',
'ifc_solvers_lsq.f90',
'ifc_solvers_prepsolver.f90',
'ifc_solvers_putget.f90',
'ifc_solvers_trainpred.f90',
'konstanter.f90',
'lo_brents_method.f90',
'lo_dielectric_interaction.f90',
'lo_dielectric_interaction_matrixelements.f90',
'lo_distribute_and_classify_things.f90',
'lo_electron_bandstructure_on_path.f90',
'lo_electron_density_of_states.f90',
'lo_electron_dispersion_relations.f90',
'lo_fftgrid_helper.f90',
'lo_longrange_electrostatics_dynmat.f90',
'lo_longrange_electrostatics.f90',
'lo_longrange_electrostatics_optz.f90',
'lo_memtracker.f90',
'lo_phonon_bandstructure_on_path.f90',
'lo_randomnumbers.f90',
'lo_sorting.f90',
'lo_symmetry_of_interactions.f90',
'lo_symmetry_of_interactions_helpers.f90',
'lo_symmetry_of_interactions_nullspace.f90',
'lo_symmetry_of_interactions_tuplets.f90',
'lo_timetracker.f90',
'lo_verletboxes.f90',
'lo_voronoi.f90',
'mpi_wrappers.f90',
'precompilerdefinitions.f90',
'quadratic_programming.f90',
'quadratic_programming_slvr.f90',
'quadratures_stencils.f90',
'type_blas_lapack_wrappers.f90',
'type_crystalstructure_alloy.f90',
'type_crystalstructure_atomdata.f90',
'type_crystalstructure.f90',
'type_crystalstructure_io.f90',
'type_crystalstructure_symmetry.f90',
'type_distancetable.f90',
'type_effective_hamiltonian.f90',
'type_embeddedatom.f90',
'type_equation_of_state_2Dbirchmur.f90',
'type_equation_of_state_birchmur.f90',
'type_equation_of_state.f90',
'type_equation_of_state_vinet.f90',
'type_forceconstant_alloy_secondorder.f90',
'type_forceconstant_firstorder.f90',
'type_forceconstant_firstorder_io.f90',
'type_forceconstant_fourthorder.f90',
'type_forceconstant_secondorder_aux.f90',
'type_forceconstant_secondorder_dynamicalmatrix.f90',
'type_forceconstant_secondorder.f90',
'type_forceconstant_secondorder_io.f90',
'type_forceconstant_secondorder_loto.f90',
'type_forceconstant_thirdorder.f90',
'type_forcemap_coefficient_diel.f90',
'type_forcemap_coefficient_pair.f90',
'type_forcemap_coefficient_quartet_01.f90',
'type_forcemap_coefficient_quartet_02.f90',
'type_forcemap_coefficient_quartet_03.f90',
'type_forcemap_coefficient_quartet_04.f90',
'type_forcemap_coefficient_quartet_05.f90',
'type_forcemap_coefficient_quartet_06.f90',
'type_forcemap_coefficient_quartet_07.f90',
'type_forcemap_coefficient_quartet_08.f90',
'type_forcemap_coefficient_quartet_09.f90',
'type_forcemap_coefficient_quartet_10.f90',
'type_forcemap_coefficient_quartet_11.f90',
'type_forcemap_coefficient_quartet_12.f90',
'type_forcemap_coefficient_quartet.f90',
'type_forcemap_coefficient_triplet.f90',
'type_forcemap_constraints.f90',
'type_forcemap.f90',
'type_forcemap_generate.f90',
'type_forcemap_io.f90',
'type_forcemap_returntensors.f90',
'type_graph_distancetable.f90',
'type_jij_secondorder.f90',
'type_lassosolvers.f90',
'type_lennardjones.f90',
'type_linkedlist.f90',
'type_mdsim.f90',
'type_phonon_dispersions.f90',
'type_phonon_dispersions_generation.f90',
'type_phonon_dos.f90',
'type_phonon_dos_integrations.f90',
'type_qpointmesh_bandstructure.f90',
'type_qpointmesh_commensurate.f90',
'type_qpointmesh.f90',
'type_qpointmesh_gridgeneration.f90',
'type_qpointmesh_integrationweights.f90',
'type_qpointmesh_io.f90',
'type_qpointmesh_wedgegeneration.f90',
'type_sqs.f90',
'type_symmetrylist_coefficientmatrix.f90',
'type_symmetrylist.f90',
'type_symmetrylist_helper.f90',
'type_symmetrylist_unique.f90',
'type_symmetryoperation.f90',
'type_voronoi_distancetable.f90',
'type_voronoi.f90',
dependencies: dep_all,
install: true,
install_dir: meson.project_build_root() / 'lib')
