executable('lineshape',
           'dielscatter.f90',
           'dielscatter_helper.f90',
           # 'dielscatter_matrixelement.f90',
           'io.f90',
           'lineshape_helper.f90',
           'lo_realspace_selfenergy.f90',
           'lo_thermal_transport.f90',
           'main.f90',
           'options.f90',
           'phonondamping_aux.f90',
           'phonondamping_dos.f90',
           'phonondamping.f90',
           'phonondamping_grid.f90',
           'phonondamping_path.f90',
           'scatteringrates.f90',
           link_with: [libolle, libflap],
           include_directories: ['../libolle', '../libflap'],
           dependencies: dep_all)
