executable('refine_structure',
           'lo_spacegroup_applyoperation.f90',
           'lo_spacegroup_charactertable.f90',
           'lo_spacegroup.f90',
           'lo_spacegroup_genoperations.f90',
           'lo_spacegroup_helpers.f90',
           'main.f90',
           'options.f90',
           'refine.f90',
           link_with: [libolle, libflap],
           include_directories: ['../libolle', '../libflap'],
           dependencies: dep_all,
           install: true,
           install_dir: meson.project_build_root() / 'bin')
